--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # ignore node modules
 /node_modules
+
+# ignore file directory
+/public/*
+/output
+/output.zip
+
+# ignore image-paths.js file
+/image-paths.js
